fix: small issues

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ MINIO_USE_SSL=false
 MINIO_ACCESS_KEY=minio_access_key
 MINIO_SECRET_KEY=minio_secret_key
 MINIO_BUCKET=wellness-images
+REDIS_URL="redis://localhost:6379"
